<?xml version="1.0"?>
<package format="3">
  <name>husky_ros2_gazebo</name>
  <version>1.0.8</version>
  <description>Clearpath Husky + Universal Manipulator Simulator</description>

  <author email="todo@todo.com">Update Later</author>
  <maintainer email="todo@todo.com">Update Later</maintainer>

  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_package_data_dependencies</buildtool_depend>

  <depend>urdf</depend>
  <depend>xacro</depend>

  <exec_depend>gazebo_plugins</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_ros2_control</exec_depend>
  <exec_depend>ros2launch</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <ament_package_data_dependencies>
      <package>husky_ros2_gazebo</package>
      <paths>
        <path from="maps" to="share/${NAME}/maps" />
      </paths>
    </ament_package_data_dependencies>
  </export>
</package>
